TEST_PROGRAMS/INVALID/Haitong_Yang/unknownSymbol.min
#incorrect program with scanning error: unknown symbol

var x : int;
x = 4@;

